--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,16 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    app.path.loan_files: /uploads/loan/files
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $legacyUrl: '%env(LEGACY_URL)%'
+            $filePath: '%kernel.project_dir%/public%app.path.loan_files%/'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -25,3 +29,17 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\EventListener\UserListener:
+        arguments:
+            - '@security.user_password_encoder.generic'
+        tags:
+            - { name: 'doctrine.orm.entity_listener' }
+
+    App\EventListener\LoanListener:
+        tags:
+            - { name: 'doctrine.orm.entity_listener' }
+
+    App\EventListener\AttachedFileListener:
+        tags:
+            - { name: 'doctrine.orm.entity_listener' }
